testsuite/invalid-types/assign.qc
void() main = {
	local float x;
	local entity e;
	x = e;
};
